started making other pages, fixed some bugs on mobile version, added a register button to login page, organized code and more

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,63 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto Mono', monospace;
     background-color: rgb(36, 36, 36);
-  }
+}
+
+h1, h2 {
+    margin-left: 10px;
+    color: rgb(206, 206, 206);
+    text-align: center;
+    z-index: 1;
+}
+
+p {
+    margin-left: 15px;
+    color: rgb(185, 185, 185);
+}
   
+
+  /* INDEX */
+
+
+
+#i-adjust {
+    position: relative;
+    top: 3px;
+    font-size: xx-large;
+}
+
+.color {
+    color: #b500e2;
+}
+
+
+fieldset {
+    border-color: #606060;
+    height: 90vh;
+    width: 96.5vw;
+    margin-left: 20px;
+    margin-top: 5px;
+}
+
+legend {
+    position: relative;
+    top: -2px;
+    color: rgb(211, 211, 211);
+    font-size: x-large;
+    margin: 0, 17px;
+    text-align: center;
+}
+
+
   /* NAVBAR */
 
 .topnav {
     overflow: hidden;
     background-color: #333;
     border-bottom: 1px solid rgb(102, 102, 102);
+    z-index: 1;
 }
   
 .topnav a {
@@ -24,10 +71,7 @@ body {
     border-right: 1px solid rgb(102, 102, 102);
 }
 
-
-/* MIGHT REMOVE LATER VVVVV */
-
-#home {
+#home-login {
     float: right;
     display: block;
     color: #f2f2f2;
@@ -39,13 +83,27 @@ body {
     height: 20px;
 }
 
-#home:hover {
+#home-login:hover {
     background-color: #ddd;
     color: black; 
 }
- 
-/* MIGHT REMOVE LATER ^^^^^ */
 
+#home-index {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding-left: 14px;
+    padding-right: 14px;
+    text-decoration: none;
+    border-left: 1px solid rgb(102, 102, 102);
+    height: 23px;
+}
+
+#home-index:hover {
+    background-color: #ddd;
+    color: black; 
+}
 
 .topnav a:hover {
     background-color: #ddd;
@@ -59,8 +117,9 @@ body {
   
 .topnav .icon {
     display: none;
+    border-left: 1px solid rgb(102, 102, 102);
 }
-  
+
 @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
@@ -68,35 +127,49 @@ body {
       display: block;
     }
 }
-  
+
+    /* MOBILE NAVBAR */
+
 @media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive .icon {
       position: absolute;
       right: 0;
       top: 0;
+      border: none;
     }
     .topnav.responsive a {
       float: none;
       display: block;
       text-align: left;
     }
+    #home {
+        float: left;
+        border: none;
+        display: block;
+        text-align: left;
+    }
 }
+
+
+
+
 
   /* LOGIN */
 
 .box {
-      width: 300px;
+      width: 320px;
+      height: 290px;;
       padding: 30px;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: rgba(0, 0, 0, 0.4);
+      background-color: #2b2b2b;
       text-align: center;
       position: absolute;
       border: 1px solid #a900d3;
       box-shadow: 0 0 5px 3px #9700bd;
-      /* border: 1px solid rgb(102, 102, 102); */
+      clear: both;
 }
 
 .box h1 {
@@ -112,11 +185,11 @@ body {
       text-align: center;
       border: 3px solid #7e7e7eb7;
       padding: 14px 10px;
-      width: 220px;
+      width: 240px;
       outline: none;
       color: white;
       border-radius: 3px;
-      transition: 0.25px;
+      
 }
 
 .box input[type="submit"] {
@@ -124,19 +197,83 @@ body {
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 3px solid #949494be;
+    border: 3px solid #7e7e7eb7;
     padding: 14px 10px;
     outline: none;
     color: rgb(206, 206, 206);;
     border-radius: 8px;
-    transition: 0.25px;
     cursor: pointer;
-    margin-top: 28px;
-    margin-bottom: 5px;
+    position: relative;
+    left: -106px;
+    margin-bottom: 0px;
+
 }
 
 .box input[type="submit"]:hover {
     background-color: #ddd;
     color: black;
     border-color: rgba(0, 0, 0, 0.09);
+    margin-bottom: 0px;
+    
 }
+
+#reg-link:hover {
+    color: #9700bd;
+}
+
+#reg-link:active {
+    color: #ffffff;
+}
+
+
+#reg-text {
+    position: relative;
+    top: -65px;
+    left: 35px;
+    color: #b6b6b6b7;
+}
+
+#reg-link {
+    position: relative;
+    top: -73px;
+    left: 32px;;
+    text-decoration: none;
+    margin: 0px;
+    padding: 0px;
+    color: rgb(206, 206, 206);
+}
+
+
+  /* ANIMATIONS */
+
+  .fade-in-text {
+    animation: fadeIn 0.7s;
+    -webkit-animation: fadeIn 0.7s;
+    -moz-animation: fadeIn 0.7s;
+    -o-animation: fadeIn 0.7s;
+    -ms-animation: fadeIn 0.7s;
+  }
+  @keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
+  
+  @-moz-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
+  
+  @-webkit-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
+  
+  @-o-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
+  
+  @-ms-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
